--- a/LightingSystem/pom.xml
+++ b/LightingSystem/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.15.1</version>
 		</dependency>
+		<dependency>
+<groupId> javax.jmdns </groupId>
+<artifactId>jmdns </artifactId>
+<version>3.4.1 </version>
+</dependency>
 		
 		<dependency>
 		    <groupId>com.google.protobuf</groupId>
